--- a/nber_papers.ipynb
+++ b/nber_papers.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.linear_model import RidgeClassifierCV\n",
+    "from sklearn.linear_model import RidgeClassifier\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n"
    ]
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "<AxesSubplot:xlabel='count', ylabel='program_desc'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "Name: program_category, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "                ('classify', MultinomialNB())])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,12 +273,12 @@
      "text": [
       "                     precision    recall  f1-score   support\n",
       "\n",
-      "            Finance       0.46      0.07      0.12      1301\n",
-      "Macro/International       0.64      0.64      0.64      3604\n",
-      "              Micro       0.73      0.87      0.79      5558\n",
+      "            Finance       0.52      0.05      0.09      1301\n",
+      "Macro/International       0.63      0.64      0.63      3604\n",
+      "              Micro       0.72      0.87      0.79      5558\n",
       "\n",
       "           accuracy                           0.69     10463\n",
-      "          macro avg       0.61      0.53      0.52     10463\n",
+      "          macro avg       0.62      0.52      0.51     10463\n",
       "       weighted avg       0.66      0.69      0.65     10463\n",
       "\n"
      ]
@@ -299,9 +299,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('vectorize', TfidfVectorizer()),\n",
+       "                ('classify', RidgeClassifier())])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ridge_pipe = Pipeline([\n",
     "    (\"vectorize\", tfidf),\n",
@@ -319,9 +331,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     precision    recall  f1-score   support\n",
+      "\n",
+      "            Finance       0.44      0.30      0.35      1301\n",
+      "Macro/International       0.62      0.59      0.61      3604\n",
+      "              Micro       0.74      0.81      0.77      5558\n",
+      "\n",
+      "           accuracy                           0.67     10463\n",
+      "          macro avg       0.60      0.57      0.58     10463\n",
+      "       weighted avg       0.66      0.67      0.66     10463\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = ridge_pipe.predict(X_test)\n",
     "print(classification_report(y_test, y_pred))"
