--- a/nber_papers.ipynb
+++ b/nber_papers.ipynb
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build the Model"
+    "## Predictive Modeling"
    ]
   },
   {
